# claurst

./: DIFF_ANALYSIS.md  README.md  RUST_IMPLEMENTATION_PLAN.md
.github/workflows/: release.yml
docs/: advanced.md  commands.md  installation.md
public/session/: index.html
spec/: 02_commands.md
src-rust/: Cargo.toml
src-rust/crates/api/: Cargo.toml
src-rust/crates/api/src/: cch.rs  lib.rs  model_registry.rs  registry.rs
src-rust/crates/api/src/providers/: bedrock.rs  codex.rs  copilot.rs
src-rust/crates/cli/: Cargo.toml
src-rust/crates/cli/src/: codex_oauth_flow.rs  main.rs
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: lib.rs  maintenance.rs  named_commands.rs  ui_settings.rs
src-rust/crates/core/src/: analytics.rs  codex_oauth.rs  context_collapse.rs  device_code.rs  feature_flags.rs  lib.rs  oauth_config.rs  session_storage.rs  session_tracing.rs  system_prompt.rs  tips.rs
src-rust/crates/core/src/share_export/: template.css  template.html  template.js
src-rust/crates/query/src/: lib.rs  skill_prefetch.rs
src-rust/crates/tools/src/: batch_edit.rs
src-rust/crates/tui/: Cargo.toml
src-rust/crates/tui/src/: app.rs  lib.rs  model_picker.rs  prompt_input.rs  render.rs  settings_screen.rs
