[package]
name = "cc-commands"
version.workspace = true
edition.workspace = true

[features]
# Pass-through features from cc-core
ultraplan = ["cc-core/ultraplan"]

[dependencies]
cc-core = { workspace = true }
cc-api = { workspace = true }
cc-tools = { workspace = true }
cc-query = { workspace = true }
cc-mcp = { workspace = true }
cc-tui = { workspace = true }
cc-plugins = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
arboard = { version = "3", default-features = false }
urlencoding = { workspace = true }
open = { workspace = true }
qrcode = { workspace = true }
cc-bridge = { workspace = true }
hostname = "0.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
